--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,25 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+	
+   <dependency>
+     <groupId>org.scala-lang</groupId>
+     <artifactId>scala-library</artifactId>
+     <version>2.13.0</version>
+   </dependency>
+ 
+   <dependency>
+     <groupId>com.google.appengine</groupId>
+     <artifactId>appengine-api-1.0-sdk</artifactId>
+     <version>1.9.76</version>
+   </dependency>
+ 
+   <dependency>
+     <groupId>io.github.clormor</groupId>
+     <artifactId>santander-parser</artifactId>
+     <version>0.4.15</version>
+   </dependency>
+ </dependencies>
 
 	<build>
 		<plugins>
